[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainManuUi/PlayMenu/AddPlayerMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Custom_Fonts/cardLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Custom_Fonts/cardTitleLabel.tres" type="DynamicFont" id=3]

[node name="SavedCardsPanel" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1068.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 3 )
text = "Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 300.0
margin_right = 1080.0
margin_bottom = 1517.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="ScrollContainer"]

[node name="BackButton" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPlayerLineEdit" type="LineEdit" parent="."]
margin_top = 1517.0
margin_right = 880.0
margin_bottom = 1717.0
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Add a Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPlayerButton" type="Button" parent="."]
margin_left = 880.0
margin_top = 1517.0
margin_right = 1080.0
margin_bottom = 1717.0
custom_fonts/font = ExtResource( 2 )
text = "Add"

[node name="StartGameButton" type="Button" parent="."]
margin_top = 1717.0
margin_right = 1080.0
margin_bottom = 1920.0
custom_fonts/font = ExtResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="back_button"]
[connection signal="pressed" from="AddPlayerButton" to="." method="add_player_button"]
[connection signal="pressed" from="StartGameButton" to="." method="start_game"]
